@@ -1,7 +1,6 @@
 from beaker.middleware import SessionMiddleware
 from beaker.session import Session
 from nose.tools import *
-import webob
 import datetime
 import re
 
@@ -12,7 +11,6 @@ def test_cookie_expires():
 
     key = 'beaker.session.cookie_expires'
     now = datetime.datetime.now()
-    request = webob.Request.blank('/')
 
     values = ['300', 300,
         True,  'True',  'true',  't', '1', 1, 
@@ -38,12 +36,12 @@ def test_cookie_expires():
 def test_cookie_exprires_2():
     """Exhibit Set-Cookie: values."""
     expires = Session(
-            webob.Request.blank('/').environ, cookie_expires=True
+            {}, cookie_expires=True
             ).cookie.output()
 
     assert re.match('Set-Cookie: beaker.session.id=[0-9a-f]{32}; Path=/', expires), expires
     no_expires = Session(
-            webob.Request.blank('/').environ, cookie_expires=False
+            {}, cookie_expires=False
             ).cookie.output()
 
     assert re.match('Set-Cookie: beaker.session.id=[0-9a-f]{32}; expires=(Mon|Tue), 1[89]-Jan-2038 [0-9:]{8} GMT; Path=/', no_expires), no_expires
